Added ui ingress controller k8s config with tls encryption support* (HW-26)

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ kubernetes/ansible/files/*.pem
 kubernetes/ansible/files/*.csr
 kubernetes/ansible/files/*.kubeconfig
 kubernetes/ansible/files/encryption-config.yaml
+kubernetes/reddit/cluster-admin-rolebinding.yml
+kubernetes/reddit/ui-ingress-secret.yml
