Reddit microservices k8s manifests replaced by helm charts (HW-27)
Added ui, comment, post, reddit helm charts. Removed unnecessary k8s
manifests respectively

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ kubernetes/ansible/files/*.csr
 kubernetes/ansible/files/*.kubeconfig
 kubernetes/ansible/files/encryption-config.yaml
 kubernetes/reddit/cluster-admin-rolebinding.yml
-kubernetes/reddit/ui-ingress-secret.yml
+*.tgz
