Added k8s bootstrapping via terraform (HW-27)
After gke creation terraform execute kubernetes/bootstrap.sh script

--- a/kubernetes/bootstrap/cluster-admin-rolebinding.yml.example
+++ b/kubernetes/bootstrap/cluster-admin-rolebinding.yml.example
@@ -14,4 +14,4 @@ roleRef:
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
-  name: SETUP_USER_ACCOUNT_HERE
+  name: gcpaleksandrloktionov1@gmail.com
