--- a/kubernetes/charts/prometheus/templates/alertmanager-deployment.yaml
+++ b/kubernetes/charts/prometheus/templates/alertmanager-deployment.yaml
@@ -52,9 +52,9 @@ spec:
                   apiVersion: v1
                   fieldPath: status.podIP
           args:
-            - --config.file=/etc/config/alertmanager.yml
+            - /bin/alertmanager
+            - --config.file=/etc/alertmanager/config.yml
             - --storage.path={{ .Values.alertmanager.persistentVolume.mountPath }}
-            - --cluster.advertise-address=$(POD_IP):6783
           {{- range $key, $value := .Values.alertmanager.extraArgs }}
             - --{{ $key }}={{ $value }}
           {{- end }}
